Fixed spacing on loved one medical page

--- a/css/custom.css
+++ b/css/custom.css
@@ -46,6 +46,10 @@
     text-align: right;
 }
 
+#addCheckupEvent-button {
+    text-align: right;
+}
+
 .thumb {
     background-size: cover;
     height: 10vw;
